--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #181818;
+    color: #dddddd;
+}
+
+a {
+   text-decoration: none; 
+}
+
+a:hover {
+    color: red;
+}
+
+h1 {
+    font-size: 40px;
 }
